SERVER-11806 Distinct errors for SSL connection closes